GE-26 feat: add redirect to main if logged out. Fix word wrap

--- a/src/styles/components/forms/AuthForm.scss
+++ b/src/styles/components/forms/AuthForm.scss
@@ -10,6 +10,13 @@
     font-size: 14px;
     padding-top: 50px;
   }
+
+  h2 {
+    max-width: 100%;
+    //overflow-wrap: break-word;
+    hyphens: auto;
+    text-align: center;
+  }
 }
 
 .form {
@@ -17,6 +24,7 @@
   display: flex;
   flex-direction: column;
   width: 40rem;
+  max-width: 100%;
 
   @media (max-width: $mobile-big-width) {
     padding: 0 1rem;
